--- a/app/src/main/res/layout/item_add_dialog.xml
+++ b/app/src/main/res/layout/item_add_dialog.xml
@@ -77,6 +77,13 @@
                             >
                         </android.support.v7.widget.RecyclerView>
 
+    <View
+        android:layout_marginTop="25dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -94,10 +101,23 @@
                 android:id="@+id/addItem_cancel_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
+                android:background="#00000000"
                 android:textSize="15dp"
                 android:text="取消"
                 android:gravity="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="2dp"
+            android:gravity="center|center_horizontal">
+            <View
+                android:layout_width="0.5dp"
+                android:layout_height="30dp"
+                android:background="@color/black"/>
         </LinearLayout>
 
         <LinearLayout
@@ -111,7 +131,7 @@
                 android:id="@+id/addItem_cfm_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
+                android:background="#00000000"
                 android:textSize="15dp"
                 android:gravity="center"
                 android:text="确定" />
