--- a/app/src/main/res/layout/base_toolbar.xml
+++ b/app/src/main/res/layout/base_toolbar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.AppBarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_scrollFlags="scroll|enterAlways"
     android:id="@+id/appBarLayout"
     android:layout_width="match_parent"
