--- a/app/src/main/res/values-w820dp/attrs.xml
+++ b/app/src/main/res/values-w820dp/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <attr format="reference" name="SwipeBackLayoutStyle"/>
+  <!--<attr format="reference" name="SwipeBackLayoutStyle"/>-->
 
   <declare-styleable name="SwipyRefreshLayout">
     <attr name="direction">
