--- a/app/src/main/res/layout/invitation_activity.xml
+++ b/app/src/main/res/layout/invitation_activity.xml
@@ -3,18 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/invitation_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/activity_bg"
     tools:context=".ui.invitationList.InvitationActivity">
     <include layout="@layout/custom_toolbar"/>
-    <net.mobctrl.views.SuperSwipeRefreshLayout
-        android:id="@+id/invitation_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/activity_my_focus_recyclerview"
+<net.mobctrl.views.SuperSwipeRefreshLayout
+    android:id="@+id/invitation_refresh"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
-    </net.mobctrl.views.SuperSwipeRefreshLayout>
+    android:layout_height="wrap_content">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/activity_my_focus_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</net.mobctrl.views.SuperSwipeRefreshLayout>
+
+   
 </LinearLayout>
