我关注的用户优化

--- a/app/src/main/res/layout/home_sidebar_item.xml
+++ b/app/src/main/res/layout/home_sidebar_item.xml
@@ -15,16 +15,19 @@
         android:background="#52cf69"
         android:orientation="horizontal">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="15dp"
+            android:padding="10dp"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/head"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="25dp"
+            android:paddingLeft="27dp"
+            android:paddingTop="18dp"
+            android:paddingBottom="18dp"
             android:text="谢霆锋"
             android:textColor="#fff"
             android:textSize="22sp"/>
@@ -35,8 +38,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="35dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/passwordchange"
@@ -49,8 +53,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/myinvitation"
@@ -63,8 +68,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/myattendance"
@@ -77,8 +83,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/mypersistence"
@@ -91,8 +98,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/myattention"
@@ -105,8 +113,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/mymessage"
@@ -119,8 +128,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/setting"
@@ -139,8 +149,9 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginBottom="32dp"
+        android:paddingLeft="27dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/update"
