--- a/app/src/main/res/layout/swipeback_layout.xml
+++ b/app/src/main/res/layout/swipeback_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015 [1076559197@qq.com | tchen0707@gmail.com]
   ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License”);
+  ~ Licensed under the Apache License, VersionBean 2.0 (the "License”);
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
