--- a/app/src/main/res/layout/invitation_activity.xml
+++ b/app/src/main/res/layout/invitation_activity.xml
@@ -5,29 +5,35 @@
     android:layout_height="wrap_content"
     android:background="@color/activity_bg"
     tools:context=".ui.invitationList.InvitationActivity">
-    <LinearLayout
-        android:id="@+id/invitation_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <include layout="@layout/custom_toolbar"/>
-        <net.mobctrl.views.SuperSwipeRefreshLayout
-            android:id="@+id/invitation_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.example.vizax.with.util.LoadMoreRecyclerView
-                android:id="@+id/activity_my_focus_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </net.mobctrl.views.SuperSwipeRefreshLayout>
-    </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/invitation_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/launch" />
-   
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+        <LinearLayout
+            android:id="@+id/invitation_root"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <include layout="@layout/custom_toolbar"/>
+            <net.mobctrl.views.SuperSwipeRefreshLayout
+                android:id="@+id/invitation_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.example.vizax.with.util.LoadMoreRecyclerView
+                    android:id="@+id/activity_my_focus_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </net.mobctrl.views.SuperSwipeRefreshLayout>
+        </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/invitation_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/launch" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.design.widget.CoordinatorLayout>
