圆形头像库

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -3,5 +3,5 @@
 
     <item android:drawable="@color/colorPrimary"/>
 
-    <item android:drawable="@drawable/art_canteen_intro1" android:gravity="center"/>
+    <item android:drawable="@drawable/splash_bg" android:gravity="center"/>
 </layer-list>
