--- a/app/src/main/res/layout/invitation_activity.xml
+++ b/app/src/main/res/layout/invitation_activity.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@color/activity_bg"
     tools:context=".ui.invitationList.InvitationActivity">
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeLayout"
+    <include layout="@layout/custom_toolbar"/>
+    <net.mobctrl.views.SuperSwipeRefreshLayout
+        android:id="@+id/invitation_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
@@ -16,16 +17,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <include layout="@layout/custom_toolbar"/>
-            <net.mobctrl.views.SuperSwipeRefreshLayout
-                android:id="@+id/invitation_refresh"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+
+
                 <com.example.vizax.with.util.LoadMoreRecyclerView
                     android:id="@+id/activity_my_focus_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
-            </net.mobctrl.views.SuperSwipeRefreshLayout>
+
         </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
@@ -35,5 +33,5 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/launch" />
-    </android.support.v4.widget.SwipeRefreshLayout>
-</android.support.design.widget.CoordinatorLayout>
+    </net.mobctrl.views.SuperSwipeRefreshLayout>
+</LinearLayout>
