--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -6,19 +6,19 @@
     tools:context="com.example.vizax.with.ui.myhome.HomeActivity">
     <include layout="@layout/home_sidebar"/>
 
-    <!--<android.support.v4.widget.SwipeRefreshLayout-->
-        <!--android:id="@+id/swipeLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_marginTop="?attr/actionBarSize"-->
-        <!--android:scrollbars="vertical">-->
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/recyVi"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:scrollbars="vertical"-->
-            <!--android:background="@color/backColor">-->
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:scrollbars="vertical">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyVi"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:background="@color/backColor">
 
-        <!--</android.support.v7.widget.RecyclerView>-->
-    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
