--- a/app/src/main/res/layout/home_sidebar_item.xml
+++ b/app/src/main/res/layout/home_sidebar_item.xml
@@ -15,6 +15,7 @@
         android:background="#52cf69"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/my_info_user_avatar"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -22,13 +23,14 @@
             android:layout_marginLeft="5dp"
             android:src="@drawable/head"/>
         <TextView
+            android:id="@+id/my_info_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:paddingLeft="27dp"
             android:paddingTop="18dp"
             android:paddingBottom="18dp"
-            android:text="谢霆锋"
+            android:text="点击此处登录"
             android:textColor="#fff"
             android:textSize="22sp"/>
     </LinearLayout>
