--- a/app/src/main/res/layout/invitation_activity.xml
+++ b/app/src/main/res/layout/invitation_activity.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/activity_bg"
     tools:context=".ui.invitationList.InvitationActivity">
-    <include layout="@layout/custom_toolbar"/>
-    <net.mobctrl.views.SuperSwipeRefreshLayout
-        android:id="@+id/invitation_refresh"
+    <LinearLayout
+        android:id="@+id/invitation_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical">
-        <LinearLayout
-            android:id="@+id/invitation_root"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <include layout="@layout/custom_toolbar"/>
+        <net.mobctrl.views.SuperSwipeRefreshLayout
+            android:id="@+id/invitation_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/activity_my_focus_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </net.mobctrl.views.SuperSwipeRefreshLayout>
+    </LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/invitation_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/launch" />
 
-                <com.example.vizax.with.util.LoadMoreRecyclerView
-                    android:id="@+id/activity_my_focus_recyclerview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-        </LinearLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/invitation_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/launch" />
-    </net.mobctrl.views.SuperSwipeRefreshLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
