--- a/app/src/main/res/layout/user_information_activity.xml
+++ b/app/src/main/res/layout/user_information_activity.xml
@@ -24,6 +24,13 @@
                     android:layout_marginTop="23dp"
                     android:layout_marginBottom="23dp"
                     android:src="@drawable/user_avatar_3"/>
+                <ImageView
+                    android:id="@+id/user_infor_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="23dp"
+                    android:layout_marginBottom="23dp"
+                    android:src="@drawable/user_avatar_3"/>
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
