我的信息 刷新与加载更多 修复优化

--- a/app/src/main/res/layout/activity_my_message.xml
+++ b/app/src/main/res/layout/activity_my_message.xml
@@ -7,7 +7,7 @@
     android:background="#d0d0d0">
 
     <include layout="@layout/base_toolbar"/>
-    <android.support.v4.widget.SwipeRefreshLayout
+    <net.mobctrl.views.SuperSwipeRefreshLayout
         android:layout_below="@+id/appBarLayout"
         android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
@@ -16,6 +16,6 @@
             android:id="@+id/swipe_menu_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </net.mobctrl.views.SuperSwipeRefreshLayout>
 
 </RelativeLayout>
