坚持模块颜色调整

--- a/app/src/main/res/layout/insist_activity.xml
+++ b/app/src/main/res/layout/insist_activity.xml
@@ -130,8 +130,9 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
-                        android:textColor="@color/wheat"
+                        android:textColor="@color/white"
                         android:hint="每日备注"
+                        android:textColorHint="@color/white"
                         android:inputType="text"
                         android:textSize="13sp"
                         android:gravity="center"
