--- a/app/src/main/res/layout/home_sidebar.xml
+++ b/app/src/main/res/layout/home_sidebar.xml
@@ -10,6 +10,7 @@
         android:id="@+id/invitation_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/activity_bg"
         android:orientation="vertical">
         <include layout="@layout/test"/>
         <net.mobctrl.views.SuperSwipeRefreshLayout
