--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -21,12 +21,17 @@
             android:layout_gravity="center"/>
 
         <TextView
+            android:textColor="@color/white"
+            android:gravity="center"
             android:id="@+id/tv_center"
+            android:textSize="24sp"
+            android:text="with"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
         <ImageView
+
             android:layout_gravity="center"
             android:padding="5dp"
             android:src="@drawable/calenda_94dp"
