--- a/app/src/main/res/layout/activity_invitation.xml
+++ b/app/src/main/res/layout/activity_invitation.xml
@@ -63,6 +63,7 @@
                 android:text="@string/activity_title_label"/>
 
             <EditText
+                android:maxLength="8"
                 android:hint="请输入活动标题！"
                 android:id="@+id/launch_invitationTitle_edtTxt"
                 android:singleLine="true"
