--- a/app/src/main/res/layout/activity_invitation.xml
+++ b/app/src/main/res/layout/activity_invitation.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.NestedScrollView
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:id="@+id/root"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
