--- a/app/src/main/res/layout/item_my_message.xml
+++ b/app/src/main/res/layout/item_my_message.xml
@@ -7,8 +7,9 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/message_item_avatar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/head_big" />
 
     <LinearLayout
