--- a/app/src/main/res/layout/user_information_activity.xml
+++ b/app/src/main/res/layout/user_information_activity.xml
@@ -17,17 +17,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="34dp"
                 android:layout_marginRight="34dp">
-                <com.sunny.thousand.selectavatar.AvatarImageView
+                <ImageView
                     android:id="@+id/user_infor_avatar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_marginTop="23dp"
                     android:layout_marginBottom="23dp"
                     android:src="@drawable/user_avatar_3"/>
                 <ImageView
                     android:id="@+id/user_infor_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_marginTop="23dp"
                     android:layout_marginBottom="23dp"
                     android:src="@drawable/user_avatar_3"/>
