--- a/app/src/main/res/drawable-xhdpi/login_ripple.xml
+++ b/app/src/main/res/drawable-xhdpi/login_ripple.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+    >
     <!--正常状态的显示效果-->
-    <item  android:state_pressed="false" android:drawable="@drawable/shenshu_button" />
+    <item  android:state_pressed="false" android:drawable="@drawable/button_bg" />
     <item android:state_pressed="true" >
         <shape>
             <solid android:color="@color/activity_bg"/>
         </shape>
     </item>
-
 </selector>
