--- a/app/src/main/res/layout/item_my_message.xml
+++ b/app/src/main/res/layout/item_my_message.xml
@@ -7,15 +7,17 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:id="@+id/message_item_avatar"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_gravity="center"
         android:src="@drawable/head_big" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:orientation="vertical">
 
         <TextView
