--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -418,4 +418,9 @@
     <color name="midtblue">#61b6f7</color>
     <color name="menu_btn_normal">#00000000</color>
     <color name="menu_btn_pressed">#12000000</color>
+
+    <!--&#45;&#45;&#45;&#45;&#45;&#45;-->
+    <color name="about_sign">#ff666666</color>
+    <color name="about_title">#ff000000</color>
+    <color name="about_content">#ff414141</color>
 </resources>
